--- a/scss/style.css
+++ b/scss/style.css
@@ -9942,12 +9942,21 @@ a {
   font-size: 1.1em;
 }
 
+.navbar-toggler-icon {
+  color: #8f5bfe;
+}
+
 section {
   padding: 1em;
 }
 
 main {
   padding: 1em;
+}
+
+article {
+  padding: 0.5em;
+  margin: 1em;
 }
 
 footer {
