--- a/scss/style.css
+++ b/scss/style.css
@@ -22,7 +22,7 @@
   --primary: #8f5bfe;
   --secondary: #e78b06;
   --success: #28a745;
-  --info: #17a2b8;
+  --info: #fccd8a;
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f3e9f1;
@@ -1759,21 +1759,21 @@ pre code {
 .table-info,
 .table-info > th,
 .table-info > td {
-  background-color: #bee5eb;
+  background-color: #fef1de;
 }
 .table-info th,
 .table-info td,
 .table-info thead th,
 .table-info tbody + tbody {
-  border-color: #86cfda;
+  border-color: #fde5c2;
 }
 
 .table-hover .table-info:hover {
-  background-color: #abdde5;
+  background-color: #fde7c5;
 }
 .table-hover .table-info:hover > td,
 .table-hover .table-info:hover > th {
-  background-color: #abdde5;
+  background-color: #fde7c5;
 }
 
 .table-warning,
@@ -2512,33 +2512,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-info {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  color: #212529;
+  background-color: #fccd8a;
+  border-color: #fccd8a;
 }
 .btn-info:hover {
-  color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
+  color: #212529;
+  background-color: #fbbe65;
+  border-color: #fbb858;
 }
 .btn-info:focus, .btn-info.focus {
-  color: #fff;
-  background-color: #138496;
-  border-color: #117a8b;
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  color: #212529;
+  background-color: #fbbe65;
+  border-color: #fbb858;
+  box-shadow: 0 0 0 0.2rem rgba(219, 180, 123, 0.5);
 }
 .btn-info.disabled, .btn-info:disabled {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  color: #212529;
+  background-color: #fccd8a;
+  border-color: #fccd8a;
 }
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active, .show > .btn-info.dropdown-toggle {
-  color: #fff;
-  background-color: #117a8b;
-  border-color: #10707f;
+  color: #212529;
+  background-color: #fbb858;
+  border-color: #fab34c;
 }
 .btn-info:not(:disabled):not(.disabled):active:focus, .btn-info:not(:disabled):not(.disabled).active:focus, .show > .btn-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(219, 180, 123, 0.5);
 }
 
 .btn-warning {
@@ -2737,28 +2737,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-  color: #17a2b8;
-  border-color: #17a2b8;
+  color: #fccd8a;
+  border-color: #fccd8a;
 }
 .btn-outline-info:hover {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  color: #212529;
+  background-color: #fccd8a;
+  border-color: #fccd8a;
 }
 .btn-outline-info:focus, .btn-outline-info.focus {
-  box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(252, 205, 138, 0.5);
 }
 .btn-outline-info.disabled, .btn-outline-info:disabled {
-  color: #17a2b8;
+  color: #fccd8a;
   background-color: transparent;
 }
 .btn-outline-info:not(:disabled):not(.disabled):active, .btn-outline-info:not(:disabled):not(.disabled).active, .show > .btn-outline-info.dropdown-toggle {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  color: #212529;
+  background-color: #fccd8a;
+  border-color: #fccd8a;
 }
 .btn-outline-info:not(:disabled):not(.disabled):active:focus, .btn-outline-info:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-info.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(252, 205, 138, 0.5);
 }
 
 .btn-outline-warning {
@@ -4711,16 +4711,16 @@ a.badge-success:focus, a.badge-success.focus {
 }
 
 .badge-info {
-  color: #fff;
-  background-color: #17a2b8;
+  color: #212529;
+  background-color: #fccd8a;
 }
 a.badge-info:hover, a.badge-info:focus {
-  color: #fff;
-  background-color: #117a8b;
+  color: #212529;
+  background-color: #fbb858;
 }
 a.badge-info:focus, a.badge-info.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(252, 205, 138, 0.5);
 }
 
 .badge-warning {
@@ -4858,15 +4858,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-info {
-  color: #0c5460;
-  background-color: #d1ecf1;
-  border-color: #bee5eb;
+  color: #836b48;
+  background-color: #fef5e8;
+  border-color: #fef1de;
 }
 .alert-info hr {
-  border-top-color: #abdde5;
+  border-top-color: #fde7c5;
 }
 .alert-info .alert-link {
-  color: #062c33;
+  color: #625036;
 }
 
 .alert-warning {
@@ -5205,17 +5205,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-info {
-  color: #0c5460;
-  background-color: #bee5eb;
+  color: #836b48;
+  background-color: #fef1de;
 }
 .list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
-  color: #0c5460;
-  background-color: #abdde5;
+  color: #836b48;
+  background-color: #fde7c5;
 }
 .list-group-item-info.list-group-item-action.active {
   color: #fff;
-  background-color: #0c5460;
-  border-color: #0c5460;
+  background-color: #836b48;
+  border-color: #836b48;
 }
 
 .list-group-item-warning {
@@ -6066,13 +6066,13 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #17a2b8 !important;
+  background-color: #fccd8a !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
 button.bg-info:hover,
 button.bg-info:focus {
-  background-color: #117a8b !important;
+  background-color: #fbb858 !important;
 }
 
 .bg-warning {
@@ -6176,7 +6176,7 @@ button.bg-dark:focus {
 }
 
 .border-info {
-  border-color: #17a2b8 !important;
+  border-color: #fccd8a !important;
 }
 
 .border-warning {
@@ -9751,11 +9751,11 @@ a.text-success:hover, a.text-success:focus {
 }
 
 .text-info {
-  color: #17a2b8 !important;
+  color: #fccd8a !important;
 }
 
 a.text-info:hover, a.text-info:focus {
-  color: #0f6674 !important;
+  color: #faae3f !important;
 }
 
 .text-warning {
@@ -9929,6 +9929,14 @@ h3 {
     border-color: #dee2e6;
   }
 }
+.container {
+  max-width: 1240px;
+}
+
+h1 {
+  font-size: 3.5em;
+}
+
 h2 {
   font-size: 1.5em;
 }
@@ -9957,6 +9965,11 @@ main {
 article {
   padding: 0.5em;
   margin: 1em;
+}
+
+.card {
+  border: none;
+  padding-top: 1em;
 }
 
 footer {
