--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -10,6 +10,19 @@ h2{
     font-size: 1.5em;
 }
 
+h3{
+    font-size: 1.3em;
+    border-bottom: 2px solid $secondary;
+    padding-top: 1em;
+    padding-bottom: 0.2em;
+}
+
+h4{
+    font-size: 1.2em;
+    border: thick double $secondary;
+    padding: 0.5em;
+}
+
 .form-control{
     border: 2px solid lighten($primary, 20);
 }
