--- a/scss/style.css
+++ b/scss/style.css
@@ -9941,6 +9941,19 @@ h2 {
   font-size: 1.5em;
 }
 
+h3 {
+  font-size: 1.3em;
+  border-bottom: 2px solid #e78b06;
+  padding-top: 1em;
+  padding-bottom: 0.2em;
+}
+
+h4 {
+  font-size: 1.2em;
+  border: thick double #e78b06;
+  padding: 0.5em;
+}
+
 .form-control {
   border: 2px solid #d4c0ff;
 }
@@ -9974,13 +9987,6 @@ article {
 
 footer {
   padding: 1.5em;
-}
-
-h3 {
-  font-size: 1.3em;
-  border-bottom: 2px solid #e78b06;
-  padding-top: 1em;
-  padding-bottom: 0.2em;
 }
 
 ul {
